--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" type="text/css" href="header.css">
     <link rel="stylesheet" type="text/css" href="footer.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
     
 <body>
@@ -18,6 +17,9 @@
                 <img id="logoImage" src="logo.png">
             </a>
             <img id="filterImage" src="filtre.png">
+            <a href="/groupie-tracker/contact.html">
+                <button>Contactez-nous</button>
+            </a>
         </div>  
         <form method="POST" id="formSearchBar">
             <input list="list" id="searchInput" type="text" name="search" placeholder="Rechercher" autocomplete="off"/>
@@ -76,7 +78,7 @@
 
         <div id="allCardArtist">
             {{range .}}
-                <a href="/groupie-tracker/{{.ID}}" class="cardArtist" id="{{.ID}}">
+                <a href="/groupie-tracker/artist/{{.ID}}" class="cardArtist" id="{{.ID}}">
                     <div class="face face1">
                         <h2 class="nom">{{.Name}}</h2>
                     </div>
